--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   game_master:
     image: nehcy/game_master
-    container_name: translator
+    container_name: GameMaster
     build: .
     environment:
       - TG_TOKEN=<PLACE_YOUR_TGBOT_TOKEHN_THERE>
